# lis

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  example.env  frontend.py  pyproject.toml  requirements.txt
data/: calendars.example.json  service-account.google.example.json
prompts/: evaluate_tools.example.md  summarize.example.md  system.example.md
scripts/: entrypoint.sh
src/: main.py
src/agent/: __init__.py  graph.py  start.py  threads.py  workflow.py
src/agent/model/: __init__.py  chat_interface.py  graph_state.py  input.py  steps.py  tool_data.py  tool_outputs.py  tool_payloads.py
src/calendar_manager/: main.py
src/calendar_manager/model/: __init__.py  create_google_event.py  delete_event.py  retrieve_events.py  update_event.py  update_google_event.py
src/calendar_manager/service/: __init__.py  google.py  main.py
src/common/: __init__.py  main.py  normalize_delta.py
src/config/calendar/: main.py
src/config/env/: __init__.py  calendar.py  data.py  database.py  llm.py  main.py  vector.py
src/error_handler/: main.py
src/evaluate_tools/: main.py
src/evaluate_tools/model/: __init__.py  tool_config.py
src/generate_response/: main.py
src/generate_response/model/: action.py  action_payloads.py  response.py
src/llm/model/: __init__.py  llm_provider.py
src/llm/service/: __init__.py  load_embedding.py  load_model.py
src/rest/: __init__.py  graph.py  messages.py  threads.py  vectorstore.py
src/summarize/: main.py
src/summarize/model/: message.py  output.py
src/system_prompt/: main.py
src/vector_manager/: main.py
src/whatsapp/model/: __init__.py  common.py  contact.py  context.py  interactive.py  location.py  message.py  message_type.py  messaging_product.py  products.py  reaction.py  recipient_type.py  template.py
tests/: test_agent_schedule_retrieval.py  test_create_event_tomorrow.py  test_create_update_delete_event.py  test_retrieve_events.py  test_start_agent.py
